--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "clsx": "latest",
+    "lucide-react": "latest",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "lucide-react": "latest",
-    "clsx": "latest",
+    "react-kakao-maps-sdk": "^1.2.0",
     "tailwind-merge": "latest"
   },
   "devDependencies": {
-    "playwright": "latest",
-    "tsx": "latest",
-    "typescript": "latest",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "^10.4.17",
+    "playwright": "latest",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "tsx": "latest",
+    "typescript": "latest"
   }
 }
